Minor changes in CSS and Index.
Better way to centralize content in CSS and using "del" & "span" instead of "p" in price content HTML, huge thanks to @MelvinAguilar (https://www.frontendmentor.io/profile/MelvinAguilar) for the tips.

--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
 
         <div class="price-container">
           <h2>$149.99</h2>
-          <p>$169.99</p>
+          <del>
+            <span class="sr-only"></span>$169.99
+         </del>
 
         </div>
 
         <div class="button-container">
           <button id="btn">
             <div class="cart-container">
-              <img id="cart" src="./img/cart.png" alt="shopping-cart">
+              <img id="cart" src="./img/cart.png" aria-hidden="true">
             </div>
             <p>
               Add to Cart
